--- a/functions/package.json
+++ b/functions/package.json
@@ -1,25 +1,18 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "web-push": "web-push"
-  },
-  "engines": {
-    "node": "8"
-  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "firebase-admin": "^7.3.0",
-    "firebase-functions": "^2.3.0",
-    "web-push": "^3.3.5"
+    "@google-cloud/storage": "^1.2.1",
+    "busboy": "^0.2.14",
+    "cors": "^2.8.4",
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "^0.5.7",
+    "formidable": "^1.1.1",
+    "uuid-v4": "^0.1.0",
+    "web-push": "^3.2.2"
   },
-  "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
-  },
-  "private": true
+  "private": true,
+  "scripts": {
+    "web-push": "web-push"
+  }
 }
