--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.10.0"
+  },
+  "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
+    "formidable": "^1.2.1",
+    "uuid-v4": "^0.1.0"
   }
 }
